# easy_flat

./: .gitignore  .travis.yml  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  manage.py  pyproject.toml  requirements.txt  setup.cfg
_project/: asgi.py  wsgi.py
_project/settings/: base.py
api/: tests.py  urls.py
api/filters/: __init__.py  date_range.py  flat.py
api/mixins/: __init__.py  create_rating.py  list_rating.py
api/permissions/: __init__.py  owner_or_read.py
api/serializer/: __init__.py  change_password.py  create_user.py  flat.py  rating.py  renting.py
api/serializers/: __init__.py
api/tests/: __init__.py  base.py  flat.py  rating.py  renting.py
api/views/: __init__.py  change_password.py  create_user.py  flat.py  rating.py  rent.py
community/migrations/: 0001_initial.py  0002_auto_20220111_0537.py
community/models/: __init__.py  rating.py
easy_flat/: asgi.py  settings.py  urls.py  wsgi.py
easy_flat/settings/: base.py
flat/: admin.py
flat/enums/: __init__.py  arena_timeline.py  base_enum.py
flat/migrations/: 0001_initial.py  0002_auto_20211223_1055.py
flat/models/: __init__.py  flat.py  renting.py
user/: admin.py  tasks.py  tests.py  urls.py
user/migrations/: 0001_initial.py  0002_customuser_avg_rating.py  0003_auto_20220119_0711.py  0003_flat_avg_rating.py  0004_auto_20220116_0727.py
user/models/: __init__.py  change_password.py  create_user.py  sign_up.py  user.py
user/service/: token.py
